style(css): remove default styles

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -1,5 +1,1 @@
-* {
-  font-family: "Fira sans", sans-serif;
-}
-
-/*# sourceMappingURL=index.css.map */
+*{box-sizing:border-box;margin:0;font-family:"Fira sans",sans-serif}/*# sourceMappingURL=index.css.map */
