style(color): add standard into background and font

--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -4,6 +4,8 @@
 * {  
   box-sizing: border-box;
   margin: 0;
+  background-color: $primary-color;
+  color: $secondary-color;
 
   font-family: $primary-font;
 }
