--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -1,1 +1,1 @@
-*{box-sizing:border-box;margin:0;font-family:"Fira sans",sans-serif}/*# sourceMappingURL=index.css.map */
+*{box-sizing:border-box;margin:0;background-color:#0f1621;color:#e8e8e8;font-family:"Fira sans",sans-serif}/*# sourceMappingURL=index.css.map */
