--- a/src/styles/sass/components/header.scss
+++ b/src/styles/sass/components/header.scss
@@ -3,13 +3,18 @@ header {
   align-items: center;
   justify-content: space-between;
   
-  padding: 0.75rem;
+  padding-block: 0.5rem;
 
   a {
-    font-size: 0.75rem;
+    font-size: 1.125rem;
   }
 
   button {
     border: none;
+
+    padding: 0;
+
+    width: 3rem;
+    height: 3rem;
   }
 }
