--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -1,6 +1,10 @@
 @import './variables/font.scss';
 @import './variables/colors.scss';
+
 @import './components/header.scss';
+@import './components/textCard.scss';
+
+@import './pages/home/home.scss';
 
 * {  
   box-sizing: border-box;
