--- a/src/styles/sass/components/textCard.scss
+++ b/src/styles/sass/components/textCard.scss
@@ -5,6 +5,10 @@
     z-index: 1;
 
     box-shadow: 0.03125rem 0.09375rem 0.25rem rgba(0,0,0,25%), 0.75rem 0.75rem $terciary-color;
+
+    h2, p, .buttons-div {
+      padding-left: 2.75rem;
+    }
   }
 
   .right.front-card {
@@ -13,10 +17,23 @@
     z-index: 1;
 
     box-shadow: -0.03125rem 0.09375rem 0.25rem rgba(0,0,0,25%), -0.75rem 0.75rem $terciary-color;
+
+    h2, p, .buttons-div {
+      padding-left: 1.5rem;
+    }
   }
 
   .front-card {
     background-color: $secondary-color;
+
+    width: 22.5rem;
+
+    h2 {
+      font-size: 1.25rem;
+      color: $primary-color;
+
+      padding-block: 0.75rem;
+    }
 
     .hello {
       padding-top: 0.75rem;
@@ -42,7 +59,6 @@
       color: $primary-color;
 
       padding-top: 1.5rem;
-      padding-left: 2.75rem;
     }
 
     .buttons-div {
