--- a/src/styles/sass/components/textCard.scss
+++ b/src/styles/sass/components/textCard.scss
@@ -7,7 +7,7 @@
     box-shadow: 0.03125rem 0.09375rem 0.25rem rgba(0,0,0,25%), 0.75rem 0.75rem $terciary-color;
 
     h2, p, .buttons-div {
-      padding-left: 2.75rem;
+      padding-left: clamp(2.5rem, 15vw, 2.75rem);
     }
   }
 
@@ -19,14 +19,14 @@
     box-shadow: -0.03125rem 0.09375rem 0.25rem rgba(0,0,0,25%), -0.75rem 0.75rem $terciary-color;
 
     h2, p, .buttons-div {
-      padding-left: 1.5rem;
+      margin-left: clamp(1rem, 0vw, 1.5rem);
     }
   }
 
   .front-card {
     background-color: $secondary-color;
 
-    width: 22.5rem;
+    width: clamp(20rem, 99vw, 22.5rem);
 
     h2 {
       font-weight: 600;
@@ -36,23 +36,16 @@
       padding-block: 0.75rem;
     }
 
-    .hello {
-      padding-top: 0.75rem;
-      
-      font-size: 5rem;
-      line-height: 4.75rem;
-    }
-
     .mid-text {
       padding-block: 0;
 
-      font-size: 1.25rem;
+      font-size: clamp(1.15rem, 5vw, 1.25rem);
     }
 
     .strong-text {
       padding-top: 0.125rem;
 
-      font-size: 1.5rem;
+      font-size: clamp(1.4rem, 6vw, 1.5rem);
       font-weight: 600;
     }
 
@@ -65,6 +58,8 @@
     .buttons-div {
       display: flex; 
       gap: 0.5rem; 
+
+      padding-bottom: 1rem;
     
       a {
           display: flex;
@@ -77,10 +72,15 @@
 
           padding: 0.25rem 0.5rem;
 
-          font-size: 1.5rem;
+          font-size: clamp(1.4rem, 6vw, 1.5rem);
           font-weight: 500;
 
           border-radius: 0.25rem;
+
+          svg {
+            width: clamp(1.8rem, 8vw, 1.9rem);
+            height: clamp(1.8rem, 8vw, 1.9rem);
+          }
         }
       }
     }
