--- a/src/styles/sass/pages/about/components/textCard.scss
+++ b/src/styles/sass/pages/about/components/textCard.scss
@@ -2,11 +2,11 @@
   .text-card { 
     .front-card {
       height: 25rem;
-      width: clamp(18rem, 90vw, 20.5rem);
+      width: clamp(15rem, 95vw, 20.5rem);
 
       .text {
         padding-block: 0 0.25rem;
-        padding-right: 1rem;
+        padding-right: clamp(0.2rem, 0vw, 1rem);
 
         width: clamp(16rem, 80vw, 18rem);
 
