--- a/src/styles/sass/pages/about/components/textCard.scss
+++ b/src/styles/sass/pages/about/components/textCard.scss
@@ -1,8 +1,8 @@
 .about {
   .text-card { 
-    .front-card {
       height: 25rem;
       width: clamp(15rem, 95vw, 20.5rem);
+      padding-bottom: 5rem;
 
       .text {
         padding-block: 0 0.25rem;
@@ -12,7 +12,6 @@
 
         font-size: 0.875rem;
         text-align: justify;
-      }
     }
   }
 }
