--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -3,7 +3,9 @@
 
 @import './components/header.scss';
 
+@import './components/card.scss';
 @import './components/textCard.scss';
+@import './components/listCard.scss';
 
 @import './pages/home/home.scss';
 
@@ -28,6 +30,10 @@ body {
 
 a {
   text-decoration: none;
+}
+
+li {
+  list-style: none;
 }
 
 .app {
