feat(about text): add a text talking about me

--- a/src/app/styles/pages/about/components/textCard.scss
+++ b/src/app/styles/pages/about/components/textCard.scss
@@ -4,12 +4,17 @@
       width: clamp(15rem, 95vw, 20.5rem);
 
       .text {
-        padding-block: 0 0.25rem;
+        &::before {
+          content: '';
+          margin-left: 1.5rem;
+        }
+        
+        padding-block: 0 0.5rem;
         padding-right: clamp(0.2rem, 0vw, 1rem);
 
         width: clamp(16rem, 80vw, 18rem);
 
-        font-size: 0.875rem;
+        font-size: 1.0625rem;
         text-align: justify;
     }
   }
