--- a/src/app/styles/components/header.scss
+++ b/src/app/styles/components/header.scss
@@ -2,7 +2,7 @@ header {
   padding-block: 0.5rem;
   transition: all 1000ms ease;
 
-  div.desktop-header {
+  div.header.desktop-header {
     display: none;
   }
 
@@ -59,13 +59,13 @@ header {
     }
 
     nav {
-      margin-block: 10vh;
+      margin-block: 8vh;
 
       ul {
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 12vh;
+        gap: 8vh;
 
         padding: 0;
         li {
@@ -75,6 +75,14 @@ header {
         }
       }
     }
+  }  
+
+  .select-div {
+    display: none;
+  }
+
+  select {
+    display: none;
   }
 }
 
@@ -83,38 +91,43 @@ header {
     padding: 2.25rem;
 
     .header {
-      justify-content: flex-start;
+      justify-content: space-between;
       gap: 4rem;
     }
 
-    div.mobile-header {
+    div.mobile-header.header {
       display: none;
     }
 
-    div.desktop-header {
+    div.desktop-header.header {
       display: flex;
-    }
+    
 
-    .opened-nav {
-      display: flex;
-      position: relative;
-      left: 5%;
-    }
-  
-
-    a h1 {
-      font-size: 2.25rem;
-    }
-
-    nav  {
-      ul {
+      .opened-nav {
         display: flex;
-        gap: 1.75rem;
+      }
+    
 
-        li a{
-          font-size: 1.5rem;
+      a h1 {
+        font-size: 2.25rem;
+      }
+
+      nav  {
+        ul {
+          display: flex;
+          gap: 1.75rem;
+
+          li a{
+            font-size: 1.5rem;
+          }
         }
       }
+    } 
+
+    .select-div {
+      display: block;
+      width: 8.5rem;
+      height: 1rem;
     }
-  } 
+  }  
 }
