--- a/src/app/styles/components/card.scss
+++ b/src/app/styles/components/card.scss
@@ -62,3 +62,35 @@
     } 
   }
 }
+
+@media (min-width: 720px) {
+  .card {
+    width: 27rem;
+
+    &.left {
+      margin-left: 4rem;
+
+      box-shadow: 0.05rem 0.125rem 0.40rem rgba(0,0,0,25%), 1rem 1rem $terciary-color;
+
+      h2, h3, p, .buttons-div {
+        margin-left: 2rem;
+      }
+    }
+
+    &.right {
+      margin-right: 4rem;
+
+      box-shadow: -0.05rem 0.125rem 0.40rem rgba(0,0,0,25%), -1rem 1rem $terciary-color;
+
+      h2, h3, p, .buttons-div {
+        margin-left: 2rem;
+      }
+    }
+
+    h2 {
+      font-size: 2rem;
+
+      padding-block: 1rem;
+    }
+  }
+}
