--- a/src/app/styles/components/textCard.scss
+++ b/src/app/styles/components/textCard.scss
@@ -48,3 +48,38 @@
     }
   }
 }
+
+@media (min-width: 720px) {
+  .text-card {
+    .mid-text {
+      font-size: 1.375rem;
+    }
+
+    .strong-text {
+      font-size: 1.875rem;
+
+      padding-top: 0.2rem;
+    }
+
+    .buttons-div {
+      gap: 1rem;
+
+      padding-bottom: 1.25rem;
+      
+      a {
+        gap: .5rem;
+
+        height: 3rem;
+
+        padding: 0.375rem 0.75rem;
+
+        font-size: 1.875rem;
+
+        svg {
+          width: 2.5rem;
+          height: 2.5rem;
+        }
+      }
+    }
+  }
+}
