feat(responsivity): reponsivity created for min width 1024px

--- a/src/app/styles/pages/about/components/textCard.scss
+++ b/src/app/styles/pages/about/components/textCard.scss
@@ -46,3 +46,19 @@
     }
   }
 }
+
+@media (min-width: 1024px) {
+  .about {
+    .text-card {
+      width: 32rem;
+      height: 40rem;
+    
+      
+    .text {
+      font-size: 1.5rem;
+
+      width: 26.25rem;
+    }
+    }
+  }
+}
