--- a/src/app/styles/components/card.scss
+++ b/src/app/styles/components/card.scss
@@ -94,3 +94,35 @@
     }
   }
 }
+
+@media (min-width: 1024px) {
+  .card {
+    width: 34rem;
+
+    &.left {
+      margin-left: 8rem;
+
+      box-shadow: 0.125rem 0.25rem 0.5rem rgba(0,0,0,25%), 1.5rem 1.5rem $terciary-color;
+
+      h2, h3, p, .buttons-div {
+        margin-left: 3.25rem;
+      }
+    }
+
+    &.right {
+      margin-right: 8rem;
+
+      box-shadow: -0.125rem 0.25rem 0.5rem rgba(0,0,0,25%), -1.5rem 1.5rem $terciary-color;
+
+      h2, h3, p, .buttons-div {
+        margin-left: 3rem;
+      }
+    }
+
+    h2 {
+      font-size: 2.75em;
+
+      padding-block: 1.5rem;
+    }
+  }
+}
