--- a/src/app/styles/components/listCard.scss
+++ b/src/app/styles/components/listCard.scss
@@ -90,6 +90,8 @@
   .list-card {
     width: 32rem;
 
+    padding-bottom: 1.25rem;
+
     h2 {
       padding-bottom: 0.25rem;
     }
@@ -98,13 +100,11 @@
       font-size: 1.25rem;
     }
 
-
-
     ul {
       grid-template-columns: repeat(6, 1fr);
       gap: 0.75rem 0.625rem;
     
-      margin-top: 0.625rem;
+      margin-top: 0.5rem;
     }
 
     figure {
@@ -125,6 +125,48 @@
 
     figcaption {
       font-size: 0.825rem;
+    }
+  }
+}
+
+@media (min-width: 1024px) {
+  .list-card {
+    width: 40rem;
+
+    padding-bottom: 2rem;
+
+    h2 {
+      padding-bottom: 0;
+    }
+
+    h3 {
+      font-size: 1.75rem;
+
+      margin-block: 1rem 0.25rem;
+    }
+
+    ul {
+      gap: 1rem 0.75rem;
+    }
+
+    figure {
+      width: 5rem;
+      height: 6.25rem;
+  
+      div {
+        height: 5.5rem;
+  
+        margin-bottom: 0.325rem;
+
+        svg {
+          width: 5rem;
+          height: 5rem;
+        }
+      }
+    }
+
+    figcaption {
+      font-size: 1rem;
     }
   }
 }
