--- a/src/app/styles/components/textCard.scss
+++ b/src/app/styles/components/textCard.scss
@@ -41,6 +41,10 @@
 
         border-radius: 0.25rem;
 
+        span {
+          margin-top: 0.25rem;
+        }
+
         svg {
           width: clamp(1.8rem, 8vw, 1.9rem);
           height: clamp(1.8rem, 8vw, 1.9rem);
@@ -67,7 +71,7 @@
       padding-bottom: 1.25rem;
       
       a {
-        gap: .5rem;
+        gap: .375rem;
 
         height: 3rem;
 
@@ -75,9 +79,48 @@
 
         font-size: 1.875rem;
 
+        border-radius: .5rem;
+
+        span {
+          margin-top: 0.375rem;
+        }
+
         svg {
           width: 2.5rem;
           height: 2.5rem;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 1024px) {
+  .text-card {
+    .mid-text {
+      font-size: 2rem;
+    }
+
+    .strong-text {
+      font-size: 2.375rem;
+
+      padding-top: 0.375rem;
+    }
+
+    .buttons-div {
+      gap: 1.5rem;
+
+      padding-bottom: 1.75rem;
+      
+      a {
+        height: 3.75rem;
+
+        padding: 0.5rem 0.75rem;
+
+        font-size: 2.25rem;
+
+        svg {
+          width: 3rem;
+          height: 3rem;
         }
       }
     }
