--- a/src/app/styles/components/header.scss
+++ b/src/app/styles/components/header.scss
@@ -88,11 +88,10 @@ header {
 
 @media (min-width: 1024px) {
   header {
-    padding: 2.25rem;
+    padding: 1.5rem 0.5rem;
 
     .header {
       justify-content: space-between;
-      gap: 4rem;
     }
 
     div.mobile-header.header {
@@ -108,7 +107,7 @@ header {
       }
     
 
-      a h1 {
+      h1 {
         font-size: 2.25rem;
       }
 
@@ -117,7 +116,7 @@ header {
           display: flex;
           gap: 1.75rem;
 
-          li a{
+          li a {
             font-size: 1.5rem;
           }
         }
@@ -130,4 +129,10 @@ header {
       height: 1rem;
     }
   }  
+}
+
+@media (min-width: 1100px) {
+  header {
+    padding: 2.5rem;
+  }
 }
