--- a/src/app/styles/pages/about/components/textCard.scss
+++ b/src/app/styles/pages/about/components/textCard.scss
@@ -55,6 +55,11 @@
     
       
     .text {
+      &::before {
+        content: '';
+        margin-left: 2.5rem;
+      }
+
       font-size: 1.5rem;
 
       width: 26.25rem;
