--- a/src/app/styles/components/card.scss
+++ b/src/app/styles/components/card.scss
@@ -100,7 +100,7 @@
     width: 34rem;
 
     &.left {
-      margin-left: 8rem;
+      margin-inline: 2rem auto;
 
       box-shadow: 0.125rem 0.25rem 0.5rem rgba(0,0,0,25%), 1.5rem 1.5rem $terciary-color;
 
@@ -110,7 +110,7 @@
     }
 
     &.right {
-      margin-right: 8rem;
+      margin-inline: auto 2rem;
 
       box-shadow: -0.125rem 0.25rem 0.5rem rgba(0,0,0,25%), -1.5rem 1.5rem $terciary-color;
 
