--- a/src/app/styles/components/header.scss
+++ b/src/app/styles/components/header.scss
@@ -1,6 +1,5 @@
 header {
   padding-block: 0.5rem;
-  transition: all 1000ms ease;
 
   div.header.desktop-header {
     display: none;
@@ -13,7 +12,7 @@ header {
   }
 
   a {
-    font-size: clamp(1rem, 4vw, 1.125rem);
+    font-size: clamp(0.875rem, 4vw, 1.125rem);
   }
 
   .opened-nav {
@@ -110,7 +109,7 @@ header {
     
 
       h1 {
-        font-size: 2.25rem;
+        font-size: 2rem;
       }
 
       nav  {
@@ -136,5 +135,18 @@ header {
 @media (min-width: 1100px) {
   header {
     padding: 2.5rem;
+  }
+}
+
+@media (min-width: 1440px) {
+  header {
+    width: 90rem;
+    padding: 2.5rem;
+
+    div.desktop-header.header {
+      h1 {
+        font-size: 2.25rem;
+      }
+    }
   }
 }
