--- a/src/app/styles/pages/about/about.scss
+++ b/src/app/styles/pages/about/about.scss
@@ -5,27 +5,34 @@
   flex-direction: column;
   align-items: flex-end;
 
-  margin-block: 6rem;
+  margin-block: 6rem 4rem;
 
   height: 25rem;
 }
 
 @media (min-width: 540px) {
   .about {
-    margin-block: 8rem;
+    margin-top: 8rem;
   }
 }
 
 @media (min-width: 720px) {
   .about {
-    margin-block: 10rem;
+    margin-block: 10rem 6rem;
     height: 30rem;
   }
 }
 
 @media (min-width: 1024px) {
   .about {
-    margin-block: 14rem;
+    margin-block: 14rem 8rem;
     height: 40rem;
+  }
+}
+
+@media (min-width: 1440px) {
+  .about {
+    margin-block: 18.75rem 10rem;
+    height: 48rem;
   }
 }
