--- a/src/app/styles/components/card.scss
+++ b/src/app/styles/components/card.scss
@@ -90,7 +90,7 @@
     h2 {
       font-size: 2rem;
 
-      padding-block: 1rem;
+      padding-block: 1rem 0.5rem;
     }
   }
 }
@@ -122,7 +122,39 @@
     h2 {
       font-size: 2.75em;
 
-      padding-block: 1.5rem;
+      padding-block: 1.5rem 0.5rem;
+    }
+  }
+}
+
+@media (min-width: 1440px) {
+  .card {
+    width: 42.5rem;
+
+    &.left {
+      margin-inline: 7.5rem auto;
+
+      box-shadow: 0.125rem 0.25rem 0.5rem rgba(0,0,0,25%), 1.5rem 1.5rem $terciary-color;
+
+      h2, h3, p, .buttons-div {
+        margin-left: 3.5rem;
+      }
+    }
+
+    &.right {
+      margin-inline: auto 7.5rem;
+
+      box-shadow: -0.125rem 0.25rem 0.5rem rgba(0,0,0,25%), -1.5rem 1.5rem $terciary-color;
+
+      h2, h3, p, .buttons-div {
+        margin-left: 3.5rem;
+      }
+    }
+
+    h2 {
+      font-size: 3em;
+
+      padding-block: 2rem 0.5rem;
     }
   }
 }
