--- a/src/app/styles/components/header.scss
+++ b/src/app/styles/components/header.scss
@@ -147,6 +147,19 @@ header {
       h1 {
         font-size: 2.25rem;
       }
+
+      nav  {
+        ul {
+          gap: 3rem;
+        }
+      }
     }
+  }
+}
+
+@media (min-width: 1520px) {
+  header {
+    width: 100vw;
+    padding-inline: 5rem;
   }
 }
