feat(cards): change margin inline of the cards with a screen bigger than 1520px

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -63,3 +63,9 @@ li {
     width: 90rem;
   }
 }
+
+@media (min-width: 1520px) {
+  .home-main, section.about, section.tecnologies {
+    width: 90vw;
+  }
+}
