--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -6,6 +6,7 @@
 @import './components/card.scss';
 @import './components/textCard.scss';
 @import './components/listCard.scss';
+@import './components/projectCard.scss';
 
 @import './pages/home/home.scss';
 
