--- a/src/app/styles/components/projectCard.scss
+++ b/src/app/styles/components/projectCard.scss
@@ -1,82 +1,232 @@
-.projects-card {
-  margin-bottom: 4rem;
-  padding-bottom: 2.5rem;
+.projects {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 
-  .figure-list {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    align-items: center;
-    padding: 0;
-  }
-
-  .projects-figure {
-    width: 16.875rem;
-    height: 10.9375rem;
-
-    img, .over-img {
-      width: 16.875rem;
-      height: 10.9375rem;
-      border-radius: 1rem;
-    }
-    
-    .over-img {
-      padding: 0.5rem 0.75rem;
-      position: absolute;
+  .projects-card {
+    margin-bottom: 4rem;
+    padding-bottom: 2.5rem;
+    width: clamp(15rem, 95vw, 20.5rem);
+  
+    .figure-list {
       display: flex;
       flex-direction: column;
-      background-color: #0C121A80;
+      gap: 2rem;
+      align-items: center;
+      padding: 0;
+    }
+  
+    .projects-figure {
 
+      img, .over-img {
+        width: 16.875rem;
+        height: 10.9375rem;
+        border-radius: 1rem;
+      }
       
-      div.line {
-        height: 1px;
-        width: 15.375rem;
-        background-color: $white;
-      }
-
-      h3 {
-        margin: 0 0 0.125rem;
-        color: $secondary-color;
-      }
-
-      > div {
-        height: 8.25rem;
+      .over-img {
+        padding: 0.5rem 0.75rem;
+        position: absolute;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
-
-        ul {
-          padding: 0.25rem 0 0;
-          display: flex;
-          flex-flow: wrap;
-          gap: 0.25rem;
-          
-          li {
-            border: 1px $white solid;
-            color: $white;
-            padding-inline: 0.25rem;
-          }
-        }
+        background-color: #0c121ab7;
+  
         
-        .links {
+        div.line {
+          height: 1px;
+          width: 15.375rem;
+          background-color: $white;
+        }
+  
+        h3 {
+          margin: 0 0 0.125rem;
+          color: $secondary-color;
+        }
+  
+        > .bottom {
+          height: 8.25rem;
           display: flex;
           flex-direction: column;
-          gap: 0.5rem;
-          
-          a {
-            color: $primary-color;
-            background-color: $white;
-            padding: 0.1875rem 0.25rem;
-            font-size: 1.25rem;
+          justify-content: space-between;
+  
+          ul {
+            padding: 0.25rem 0 0;
             display: flex;
-            align-items: center;
+            flex-flow: wrap;
             gap: 0.25rem;
-            border-radius: 0.375rem;
-            width: fit-content;
+            
+            li {
+              border: 1px $white solid;
+              color: $white;
+              padding-inline: 0.25rem;
+            }
+          }
+          
+          .links {
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
+            
+            a {
+              color: $primary-color;
+              background-color: $white;
+              padding: 0.1875rem 0.25rem;
+              font-size: 1.25rem;
+              display: flex;
+              align-items: center;
+              gap: 0.25rem;
+              border-radius: 0.375rem;
+              width: fit-content;
+  
+              img {
+                width: 1.25rem;
+                height: auto;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
 
-            img {
-              width: 1.25rem;
-              height: auto;
+@media (min-width: 540px) {
+  .projects {
+    .projects-card {
+      width: 24rem;
+
+      .figure-list {
+        flex-flow: wrap;
+        flex-direction: row;
+        justify-content: center;
+
+        .projects-figure {
+
+          img, .over-img {
+            width: 19.75rem;
+            height: 12.8125rem;
+          }
+
+          .over-img {
+          
+            h3 {
+              font-size: 1.375rem;
+            }
+  
+            div.line {
+              width: 18.25rem;
+            }
+
+            > .bottom {
+              height: 10rem;
+
+              ul {
+
+                li {
+                  font-size: 1.125rem;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 720px) {
+  .projects {
+    .projects-card {
+      width: 26rem;
+    }
+  }
+}
+
+@media (min-width: 1024px) {
+  .projects {
+    width: 64rem;
+
+    .projects-card {
+      width: 54rem;
+
+      .figure-list {
+        margin: 1rem 3rem 0;
+        gap: 2.75rem;
+
+        .projects-figure {
+
+          img, .over-img {
+            width: 22.375rem;
+            height: 14.5rem;
+          }
+
+          .over-img {
+          
+            h3 {
+              font-size: 1.75rem;
+            }
+  
+            div.line {
+              width: 20.875rem;
+            }
+
+            > .bottom {
+              height: 12rem;
+
+              ul {
+
+                li {
+                  padding-inline: 0.3125;
+                  font-size: 1.25rem;
+                }
+
+                a {
+                  font-size: 1.5rem;
+                  width: 7.125rem;
+
+                  img {
+                    width: 1.5625rem;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 1440px) {
+  .projects {
+    width: 90rem;
+
+    .projects-card {
+      width: 64rem;
+
+      .figure-list {
+        margin: 1rem 3rem 0;
+        gap: 2.75rem;
+
+        .projects-figure {
+
+          img, .over-img {
+            width: 27rem;
+            height: 17.5rem;
+          }
+
+          .over-img {
+          
+            h3 {
+              font-size: 2rem;
+            }
+  
+            div.line {
+              width: 25.5rem;
+            }
+
+            > .bottom {
+              height: 15rem;
             }
           }
         }
