--- a/src/app/styles/components/card.scss
+++ b/src/app/styles/components/card.scss
@@ -42,6 +42,33 @@
 @media (min-width: 540px) {
   .card {
     margin: auto;
+    animation: vibrate 5s ease-in-out infinite reverse forwards;
+
+    @keyframes vibrate {
+      0% {
+        transform: translate(0);
+      }
+    
+      20% {
+        transform: translate(-2px, 2px);
+      }
+    
+      40% {
+        transform: translate(-2px, -2px);
+      }
+    
+      60% {
+        transform: translate(2px, 2px);
+      }
+    
+      80% {
+        transform: translate(2px, -2px);
+      }
+    
+      100% {
+        transform: translate(0);
+      }
+    }
 
     &.left {
       position: initial;
