--- a/src/app/styles/components/textCard.scss
+++ b/src/app/styles/components/textCard.scss
@@ -45,7 +45,7 @@
           margin-top: 0.25rem;
         }
 
-        svg {
+        img {
           width: clamp(1.8rem, 8vw, 1.9rem);
           height: clamp(1.8rem, 8vw, 1.9rem);
         }
@@ -85,7 +85,7 @@
           margin-top: 0.375rem;
         }
 
-        svg {
+        img {
           width: 2.5rem;
           height: 2.5rem;
         }
@@ -118,7 +118,7 @@
 
         font-size: 2.25rem;
 
-        svg {
+        img {
           width: 3rem;
           height: 3rem;
         }
@@ -149,7 +149,7 @@
 
         font-size: 2.75rem;
 
-        svg {
+        img {
           width: 3.5rem;
           height: 3.5rem;
         }
