--- a/src/app/styles/components/listCard.scss
+++ b/src/app/styles/components/listCard.scss
@@ -1,5 +1,5 @@
 .list-card {
-  margin-bottom: 6.5rem;
+  margin-top: 6rem;
 
   &.left {
     left: -1.375rem;
@@ -94,7 +94,6 @@
 @media (min-width: 720px) {
   .list-card {
     width: 32rem;
-
     padding-bottom: 1.25rem;
 
     h2 {
@@ -138,6 +137,7 @@
   .list-card {
     width: 54rem;
 
+    margin-top: 8rem;
     padding-bottom: 2rem;
 
     h2 {
@@ -180,6 +180,7 @@
     width: 64rem;
     height: 54rem;
 
+    margin-top: 10rem;
     padding-bottom: 2rem;
 
     h3 {
