--- a/src/app/styles/components/projectCard.scss
+++ b/src/app/styles/components/projectCard.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  margin-top: 6rem;
 
   .projects-card {
     margin-bottom: 4rem;
@@ -144,6 +145,7 @@
 
 @media (min-width: 1024px) {
   .projects {
+    margin-top: 8rem;
     width: 64rem;
 
     .projects-card {
@@ -247,6 +249,7 @@
 
 @media (min-width: 1440px) {
   .projects {
+    margin-top: 10rem;
     width: 90rem;
 
     .projects-card {
