--- a/src/app/styles/pages/about/about.scss
+++ b/src/app/styles/pages/about/about.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: flex-end;
 
-  margin-block: 6rem 4rem;
+  margin-top: 6rem;
 
   height: 25rem;
 }
@@ -18,21 +18,21 @@
 
 @media (min-width: 720px) {
   .about {
-    margin-block: 10rem 6rem;
+    margin-top: 10rem;
     height: 30rem;
   }
 }
 
 @media (min-width: 1024px) {
   .about {
-    margin-block: 14rem 8rem;
+    margin-top: 14rem;
     height: 40rem;
   }
 }
 
 @media (min-width: 1440px) {
   .about {
-    margin-block: 18.75rem 10rem;
+    margin-top: 18.75rem;
     height: 48rem;
   }
 }
