--- a/src/app/styles/components/header.scss
+++ b/src/app/styles/components/header.scss
@@ -1,5 +1,10 @@
 header {
-  padding-block: 0.5rem;
+  background-color: $primary-color;
+  position: fixed;
+  width: 100vw;
+  z-index: 1000;
+  padding: 0.5rem;
+
 
   div.header.desktop-header {
     display: none;
@@ -37,7 +42,7 @@ header {
   }
 
   &.opened-menu {
-    height: 90lvh;
+    height: 110lvh;
 
     .header {
       display: grid;
@@ -63,7 +68,8 @@ header {
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 8vh;
+        justify-content: space-between;
+        height: 60vh;
 
         padding: 0;
         li {
@@ -88,7 +94,7 @@ header {
   header {
     width: 100vw;
 
-    padding: 1.5rem 0.5rem;
+    padding: 1.5rem;
 
     .header {
       justify-content: space-between;
