--- a/src/app/styles/components/header.scss
+++ b/src/app/styles/components/header.scss
@@ -114,7 +114,7 @@ header {
     
 
       h1 {
-        font-size: 2rem;
+        font-size: 1.8125rem;
       }
 
       nav  {
@@ -140,6 +140,11 @@ header {
 @media (min-width: 1100px) {
   header {
     padding: 2.5rem;
+
+    div.desktop-header.header h1 {
+      font-size: 2rem;
+    }
+
   }
 }
 
