--- a/src/app/styles/components/header.scss
+++ b/src/app/styles/components/header.scss
@@ -4,6 +4,7 @@ header {
   width: 100vw;
   z-index: 1000;
   padding: 0.5rem;
+  box-shadow: 0 0.5rem 1rem #0c121a80;
 
 
   div.header.desktop-header {
@@ -139,7 +140,7 @@ header {
 
 @media (min-width: 1100px) {
   header {
-    padding: 2.5rem;
+    padding: 2rem;
 
     div.desktop-header.header h1 {
       font-size: 2rem;
@@ -150,9 +151,7 @@ header {
 
 @media (min-width: 1440px) {
   header {
-    width: 90rem;
-    padding: 2.5rem;
-
+    
     div.desktop-header.header {
       h1 {
         font-size: 2.25rem;
