--- a/src/app/styles/components/card.scss
+++ b/src/app/styles/components/card.scss
@@ -1,3 +1,5 @@
+@import '../keyframes.scss';
+
 .card {
   background-color: $secondary-color;
 
@@ -38,33 +40,7 @@
 @media (min-width: 540px) {
   .card {
     margin: auto;
-    animation: vibrate 5s ease-in-out infinite reverse forwards;
-
-    @keyframes vibrate {
-      0% {
-        transform: translate(0);
-      }
-    
-      20% {
-        transform: translate(-2px, 2px);
-      }
-    
-      40% {
-        transform: translate(-2px, -2px);
-      }
-    
-      60% {
-        transform: translate(2px, 2px);
-      }
-    
-      80% {
-        transform: translate(2px, -2px);
-      }
-    
-      100% {
-        transform: translate(0);
-      }
-    }
+    animation: vibrate 10s ease-in-out infinite reverse forwards;
 
     &.left {
       position: initial;
