--- a/src/app/styles/components/contactCard.scss
+++ b/src/app/styles/components/contactCard.scss
@@ -44,6 +44,25 @@
         font-size: 1.125rem;
         resize: vertical;
       }
+
+      p.denied, p.accepted {
+        width: 100%;
+        margin-left: 0;
+        text-align: center;
+      }
+
+      p.denied {
+        color: red;
+        margin-bottom: 0.5rem;
+      }
+
+      p.accepted {
+        color: #6edb43;
+        font-weight: 500;
+        background-color: $primary-color;
+        border-radius: 0.5rem;
+        padding: 0.5rem;
+      }
     }
 
     .button-div {
@@ -60,6 +79,10 @@
         border-radius: 0.25rem;
         background-color: $primary-color;
         cursor: pointer;
+
+        &.hidden {
+          display: none;
+        }
       }
     }
   }
@@ -93,6 +116,11 @@
         label, input, textarea, button {
           font-size: 1.25rem;
         }
+
+        p.accepted {
+          width: 21rem;
+          padding: 1rem;
+        }
       }
 
       .button-div button {
@@ -101,7 +129,7 @@
         border-radius: 0.5rem;
 
         &:disabled {
-          opacity: 0.5;
+          cursor: initial;
         }
       }
     }
@@ -128,6 +156,16 @@
 
         label, input, textarea, button {
           font-size: 1.375rem;
+        }
+
+        p.denied {
+          font-size: 1.125rem;
+        }
+
+        p.accepted {
+          font-size: 1.25rem;
+          width: 26rem;
+          padding: 1rem;
         }
       }
 
