--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -8,6 +8,7 @@
 @import './components/listCard.scss';
 @import './components/projectCard.scss';
 @import './components/contactCard.scss';
+@import './components/loading.scss';
 
 @import './pages/home/home.scss';
 
