--- a/src/app/styles/components/footer.scss
+++ b/src/app/styles/components/footer.scss
@@ -2,6 +2,7 @@ footer {
   padding: 2rem 1rem;
   background-color: $gray;
   width: 100%;
+  margin-top: 6rem;
 
   .footer-top {
     display: flex;
@@ -80,5 +81,11 @@ footer {
         }
       }
     }
+  }
+}
+
+@media (min-width: 540px) {
+  footer {
+    margin-top: 8rem;
   }
 }
