--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -9,6 +9,7 @@
 @import './components/projectCard.scss';
 @import './components/contactCard.scss';
 @import './components/loading.scss';
+@import './components/footer.scss';
 
 @import './pages/home/home.scss';
 
@@ -30,7 +31,7 @@ body {
   display: flex;
   justify-content: center;
   
-  background-color: $primary-color;
+  background: linear-gradient(to bottom, $primary-color 0 23.3%, $gray 26% 73.5%, $white 77.5% 100%);
 }
 
 a {
@@ -50,7 +51,29 @@ li {
   color: $terciary-color;
 }
 
+@media (min-width: 396px) {
+  body {
+    background: linear-gradient(to bottom, $primary-color 0 23.5%, $gray 26.5% 73.5%, $white 79% 100%);
+  }
+}
+
+@media (min-width: 540px) {
+  body {
+    background: linear-gradient(to bottom, $primary-color 0 23.5%, $gray 27% 74%, $white 79% 100%);
+  }
+}
+
+@media (min-width: 720px) {
+  body {
+    background: linear-gradient(to bottom, $primary-color 0 26%, $gray 29% 74.8%, $white 79% 100%);
+  }
+}
+
 @media (min-width: 1024px) {
+  body {
+    background: linear-gradient(to bottom, $primary-color 0 33%, $gray 36% 71%, $white 76% 100%);
+  }
+  
   .app {
     display: flex;
     flex-direction: column;
@@ -63,6 +86,10 @@ li {
 }
 
 @media (min-width: 1440px) {
+  body {
+    background: linear-gradient(to bottom, $primary-color 0 35.5%, $gray 39% 74.5%, $white 81% 100%);
+  }
+
   .home-main, section.about, section.technologies, section.projects, section.contact  {
     width: 90rem;
   }
