--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -10,6 +10,7 @@
 @import './components/contactCard.scss';
 @import './components/loading.scss';
 @import './components/footer.scss';
+@import './components/background.scss';
 
 @import './pages/home/home.scss';
 
@@ -30,7 +31,7 @@ html {
 body {
   display: flex;
   justify-content: center;
-  
+  overflow-x: hidden;
   background: linear-gradient(to bottom, $primary-color 0 23.3%, $gray 26% 73.5%, $white 77.5% 100%);
 }
 
