feat(background): add a qr-code on the background

--- a/src/app/styles/components/background.scss
+++ b/src/app/styles/components/background.scss
@@ -2,6 +2,7 @@
 @import './background/p.scss';
 @import './background/points.scss';
 @import './background/waves.scss';
+@import './background/images.scss';
 
 .background-elements {
   z-index: -1;
