--- a/src/app/styles/components/background/images.scss
+++ b/src/app/styles/components/background/images.scss
@@ -1,45 +1,118 @@
 .background-elements {
-  .qr-code {
+  svg, img {
     position: absolute;
-    opacity: 0.6;
-    top: 35rem;
-    width: 8rem;
-    height: 8rem;
+
+    &.qr-code {
+      opacity: 0.6;
+      top: 35rem;
+      width: 8rem;
+      height: 8rem;
+    }
+  
+    &.code {
+      top: 4.5rem;
+      left: 10%;
+    }
+
+    &.array {
+      left: 85%;
+      top: 15rem;
+    }
+
+    &.object {
+      display: none;
+    }
+  }
+
+  svg {
+    opacity: 0.5;
+    width: 2rem;
+    height: 2rem;
   }
 }
 
 @media (min-width: 540px) {
   .background-elements {
-    .qr-code {
+    img.qr-code {
       left: 5%;
+    }
+
+    svg {
+      width: 2.5rem;
+      height: 2.5rem;
+    
+      &.code {
+        top: 4rem;
+      }
     }
   }
 }
 
 @media (min-width: 720px) {
   .background-elements {
-    .qr-code {
+    img.qr-code {
       top: 50rem;
       width: 12rem;
       height: 12rem;
+    }
+
+    svg {
+      width: 3rem;
+      height: 3rem;
+
+      &.object {
+        display: block;
+        top: 15rem;
+        left: 53%;
+      }
     }
   }
 }
 
 @media (min-width: 1024px) {
   .background-elements {
-    .qr-code {
+    img.qr-code {
       top: 72rem;
       width: 15rem;
       height: 15rem;
+    }
+
+    svg {
+      width: 4rem;
+      height: 4rem;
+    
+      &.code {
+        top: 6rem;
+        left: 8%;
+      }
+
+      &.array {
+        top: 25rem;
+      }
+
+      &.object {
+        top: 22rem;
+        left: 57%;
+      }
     }
   }
 }
 
 @media (min-width: 1440px) {
   .background-elements {
-    .qr-code {
+    img.qr-code {
       top: 84rem;
+    }
+
+    svg {
+      &.code {
+        top: 8rem;
+        left: 5%;
+      }
+
+      &.object {
+        top: 30rem;
+      }
     }
   }
 }
