fix(h1): fix h1 duplicated

--- a/src/app/styles/components/footer.scss
+++ b/src/app/styles/components/footer.scss
@@ -9,6 +9,10 @@ footer {
     flex-direction: column;
     align-items: center;
     gap: 0.5rem;
+
+    .logo {
+      font-size: clamp(1.5rem, 10vw, 2rem);
+    }
   }
 
   .footer-line {
