--- a/src/app/styles/components/header.scss
+++ b/src/app/styles/components/header.scss
@@ -6,11 +6,6 @@ header {
   padding: 0.5rem;
   box-shadow: 0 0.5rem 1rem #0c121a80;
 
-
-  div.header.desktop-header {
-    display: none;
-  }
-
   .header {
     display: flex;
     justify-content: space-between;
@@ -93,22 +88,20 @@ header {
 
     padding: 1rem;
 
+    .burger, .x {
+      display: none;
+    }
+
     .header {
       justify-content: space-between;
     }
 
-    div.mobile-header.header {
-      display: none;
-    }
-
-    div.desktop-header.header {
+    div.header {
       display: flex;
-    
 
       .opened-nav {
         display: flex;
       }
-    
 
       h1 {
         font-size: 1.8125rem;
@@ -126,6 +119,31 @@ header {
       }
     } 
 
+    &.opened-menu {
+      height: initial;
+
+      .header {
+        display: flex;
+      }
+  
+      nav {
+        margin-block: initial;
+  
+        ul {
+          display: flex;
+          flex-direction: row;
+          height: initial;
+
+          margin-left: 2.5rem;
+          li {
+            a {
+              font-size: clamp(1.8rem, 7vw, 2rem);
+            }
+          }
+        }
+      }
+    }
+
     .select-div {
       display: block;
       width: 8.5rem;
@@ -136,7 +154,7 @@ header {
 
 @media (min-width: 1100px) {
   header {
-    div.desktop-header.header h1 {
+    div.header h1 {
       font-size: 2rem;
     }
 
@@ -146,7 +164,7 @@ header {
 @media (min-width: 1440px) {
   header {
     
-    div.desktop-header.header {
+    div.header {
       h1 {
         font-size: 2.25rem;
       }
