fix(project card): now, when you focus on a button inside one of the project cards, everything apper

--- a/src/app/styles/components/projectCard.scss
+++ b/src/app/styles/components/projectCard.scss
@@ -204,7 +204,7 @@
               transition: color ease 300ms, background-color ease 300ms;
             }
 
-            &:hover {
+            &:hover, &:focus-within {
               background-color: $transparent-primary-color;
               transition: background-color ease 500ms;
 
