--- a/src/app/styles/components/header.scss
+++ b/src/app/styles/components/header.scss
@@ -34,8 +34,6 @@ header {
   }
 
   &.opened-menu {
-    height: 110lvh;
-
     .header {
       display: grid;
     }
@@ -46,6 +44,10 @@ header {
     }
 
     .opened-nav {
+      position: fixed;
+      background-color: $primary-color;
+      right: 1px;
+      top: 4rem;
       display: flex;
       justify-content: center;
       grid-row: 2;
@@ -54,19 +56,22 @@ header {
     }
 
     nav {
-      margin-block: 8vh;
+      border: $gray 1px solid;
+      padding: 0.25rem;
 
       ul {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
-        height: 60vh;
+        gap: 0.375rem;
 
         padding: 0;
         li {
           a {
-            font-size: clamp(1.8rem, 7vw, 2rem);
+            font-size: 1.25rem;
+            text-underline-offset: 5px;
+            text-decoration: underline 1px;
           }
         }
       }
@@ -101,6 +106,7 @@ header {
 
       .opened-nav {
         display: flex;
+        position: initial;
       }
 
       h1 {
@@ -128,16 +134,18 @@ header {
   
       nav {
         margin-block: initial;
-  
+        padding: 0;
+        border: none;
+
         ul {
           display: flex;
           flex-direction: row;
           height: initial;
 
-          margin-left: 2.5rem;
           li {
             a {
               font-size: clamp(1.8rem, 7vw, 2rem);
+              text-decoration: none;
             }
           }
         }
