perf(link buttons): make component "LinkButtons" works for all the other buttons

--- a/src/app/styles/components/projectCard.scss
+++ b/src/app/styles/components/projectCard.scss
@@ -67,16 +67,20 @@
             flex-direction: column;
             gap: 0.5rem;
             
-            a {
-              color: $primary-color;
+            a.link-button {
               background-color: $white;
               padding: 0.1875rem 0.25rem;
               font-size: 1.25rem;
               display: flex;
+              flex-direction: row-reverse;
               align-items: center;
               gap: 0.25rem;
               border-radius: 0.375rem;
               width: fit-content;
+
+              span {
+                color: $primary-color;
+              }
   
               svg {
                 width: 1.25rem;
@@ -184,12 +188,16 @@
                 transition: color ease 500ms, border-color ease 500ms;
               }
 
-              a {
+              a.link-button {
                 font-size: 1.5rem;
                 color: transparent;
                 background-color: transparent;
                 transition: color ease 300ms, background-color ease 300ms;
 
+                span {
+                  color: transparent;
+                  transition: color ease 500ms;
+                }
 
                 svg {
                   width: 1.5625rem;
@@ -227,10 +235,14 @@
                   transition: color ease 500ms, border-color ease 500ms;
                 }
 
-                a {
-                  color: $primary-color;
+                a.link-button {
                   background-color: $secondary-color;
                   transition: background-color ease 500ms, color ease 500ms;
+
+                  span {
+                    color: $primary-color;
+                    transition: color ease 500ms;
+                  }
 
                   svg {
                     background-color: none;
