--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,7 +1,7 @@
 @import './variables/font.scss';
 @import './variables/colors.scss';
 
-@import './components/header.scss';
+@import './components/header/header.scss';
 
 @import './components/card.scss';
 @import './components/textCard.scss';
@@ -24,8 +24,9 @@
   font-family: $primary-font;
 }
 
-html {
+html, html body {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
