--- a/src/app/styles/components/header/languageSelector.scss
+++ b/src/app/styles/components/header/languageSelector.scss
@@ -22,12 +22,18 @@ header .header .select-div .desktop-language-selector {
         border: 1px solid $secondary-color;
         border-radius: 1rem;
 
-        span {
+        div {
           display: flex;
           align-items: center;
-          padding-right: 0.75rem;
-          border-right: 1px solid $secondary-color;
+          width: 6rem;
           height: 2rem;
+          border-right: 1px solid $secondary-color;
+          
+          span {
+            display: flex;
+            align-items: center;
+            padding-right: 0.75rem;
+          }
         }
 
         svg path:first-child {
